--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div>
   <img src="images/Final logo_white.png" style="width:50%" >
    <br>
-   <p>on the way . . .</p>
+   <p>the site is on the way . . .</p>
    </div>
 
    
