--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
   <div>
   <img src="images/Final logo_white.png" style="width:50%" >
    <br>
-   <p>the site is on the way . . .</p>
+   <br>
+   <p>the site is on its way . . .</p>
+   <img src="images/Rocket_web.jpg" style="width:50%" >
    </div>
 
    
   </section>
 
   </body>
+  </html>
 
