--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="images/Final logo_white.png" style="width:50%" >
    <br>
    <br>
-   <p>the site is on its way . . .</p>
+   <p>zee site is on its way . . .</p>
    <img src="images/Rocket_web.jpg" style="width:50%" >
    </div>
 
