--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="images/Final logo_white.png" style="width:50%" >
    <br>
    <br>
-   <p>site is on the way . . .</p>
+   <p>site on way . . .</p>
    <img src="images/Rocket_web.jpg" style="width:50%" >
    </div>
 
